<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="32dp"
    tools:context=".BookingConfirmationActivity">

    <ImageView
        android:id="@+id/iv_success_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_check_circle"
        android:contentDescription="@string/content_description_success"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_confirmation_title"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="@color/green_success" />
    <TextView
    android:id="@+id/tv_confirmation_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/confirmation_title"
    android:textColor="@color/text_dark_brown"
    android:textSize="28sp"
    android:textStyle="bold"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@id/iv_success_icon"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/tv_confirmation_message" />

    <TextView
        android:id="@+id/tv_confirmation_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_message"
        android:textAlignment="center"
        android:textColor="@color/text_dark_brown"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_confirmation_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/card_summary"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_confirmation_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_back_to_home">

        <TextView
            android:id="@+id/tv_confirmation_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/text_dark_brown"
            android:textSize="14sp"
            tools:text="Service: Cornrows\nDate &amp; Time: Jan 10, 10 AM\nClient: Jane Doe\nNotes: None"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_back_to_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_back_to_home"
        android:textColor="@android:color/white"
        android:background="@drawable/button_gradient"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>